--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -34,12 +34,12 @@ main {
         figure > div {
             display: flex;
             z-index: 3;
-            flex-direction: column;
-            justify-content: center;
+            flex-direction: row;
+            justify-content: space-around;
             position: absolute;
             top: 10px;
             height: 140px;
-            width: 200px;
+            width: 100%;
             background-color: rgba(250, 250, 246, 0);
             opacity: 1;
             border-radius: 3px;
@@ -50,8 +50,7 @@ main {
                 display: flex;
                 font-size: 27px;
                 position: relative;
-                top: 240px;
-                left: 60px;
+                top: 215px;
                 color: rgb(230, 126, 29);
                 border: 5px solid rgba(255, 255, 255, 0.863);
                 font-weight: 700;
