--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ h1 {
   font-size: 1.4em;
   color: black;
   font-family: 'Playfair Display', serif;
-  padding: 30px 30px 30px 20px; }
+  padding: 30px 30px 15px 20px; }
 
 h2 {
   font-size: 1.4em;
@@ -132,7 +132,7 @@ header {
   z-index: 10;
   border-bottom-right-radius: 0px;
   box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
-  border-bottom: solid 2px rgba(0, 0, 0, 0.733); }
+  border-bottom: solid 2px rgba(247, 120, 1, 0.733); }
   header a > img {
     padding-top: 25px;
     height: 140px;
@@ -187,13 +187,13 @@ main {
       padding: 0;
       justify-content: center;
       align-items: center; }
-    main #call-to-action figure > img {
+    main #call-to-action figure > video {
       opacity: 1;
-      margin-top: -30px;
+      margin-top: 40px;
       width: 100%;
       max-width: 100%;
-      height: 500px;
-      object-fit: contain;
+      height: 400px;
+      object-fit: cover;
       z-index: 2; }
     main #call-to-action figure > div {
       display: flex;
@@ -214,7 +214,7 @@ main {
         display: flex;
         font-size: 27px;
         position: relative;
-        top: 215px;
+        top: 255px;
         color: #e67e1d;
         border: 5px solid rgba(255, 255, 255, 0.863);
         font-weight: 700;
@@ -236,27 +236,45 @@ main {
           box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.164); }
   main #engagements {
     display: flex;
-    margin-top: -85px;
+    margin-top: -55px;
     padding: 20px;
+    padding-top: 50px;
     flex-direction: column;
     justify-content: space-between;
-    row-gap: 20px;
+    row-gap: 30px;
     z-index: 2;
     padding-bottom: 40px;
     background-color: white;
     background-position: 0%; }
     main #engagements article {
+      position: relative;
       background-color: #fff;
       display: flex;
       flex-direction: column;
       box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.301);
       border-radius: 20px;
       padding: 5px; }
+      main #engagements article p {
+        font-size: 1em;
+        font-weight: 400;
+        color: black;
+        display: flex;
+        position: absolute;
+        background-color: #f8eb75;
+        padding: 10px;
+        z-index: 3;
+        top: -15px;
+        left: 150px;
+        border-radius: 50%;
+        height: 10px;
+        width: 10px;
+        text-align: center;
+        align-items: center; }
       main #engagements article figure {
         flex-basis: 90%; }
       main #engagements article img {
         width: 100%;
-        height: 110px;
+        height: 80px;
         border-top-right-radius: 20px;
         border-top-left-radius: 20px;
         object-fit: cover; }
@@ -333,14 +351,16 @@ main {
     flex-wrap: wrap;
     justify-content: space-around; }
     main #producteurs h2 {
-      flex-basis: 100%; }
+      flex-basis: 100%;
+      padding-bottom: 50px; }
     main #producteurs div {
       display: flex;
+      column-gap: 20px;
       font-size: 0.5em;
       border: solid 2px yellowgreen;
       border-radius: 50%;
-      width: 50px;
-      height: 50px;
+      width: 150px;
+      height: 150px;
       justify-content: center;
       align-items: center;
       text-align: center; }
