--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -20,13 +20,13 @@ main {
             justify-content: center;
             align-items: center;
         }
-        figure > img {
+        figure > video {
             opacity: 1;
-            margin-top: -30px;
+            margin-top: 40px; 
             width: 100%;
             max-width: 100%;
-            height: 500px;
-            object-fit: contain;
+            height: 400px;
+            object-fit: cover;
                        
           
             z-index: 2;
@@ -50,7 +50,7 @@ main {
                 display: flex;
                 font-size: 27px;
                 position: relative;
-                top: 215px;
+                top: 255px;
                 color: rgb(230, 126, 29);
                 border: 5px solid rgba(255, 255, 255, 0.863);
                 font-weight: 700;
@@ -62,16 +62,8 @@ main {
                 justify-content: center;
                 z-index: 1;
                 background-color: whitesmoke;
-                //background-image: linear-gradient(rgba(250, 250, 250, 0.473), rgb(13, 27, 219));
                 box-shadow: 1px 30px 40px -7px rgba(95, 83, 42, 0.39);
                 transition: background-size 0.4s;
-                
-                //background-image: url("https://previews.123rf.com/images/feverpitched/feverpitched0808/feverpitched080800141/3475197-rouge-et-blanc-quadrill%C3%A9-couverture-pique-nique-d%C3%A9tail.jpg");
-                //background-size: 60%;
-                //border-top: solid 2px rgb(73, 73, 218);
-                //border-left: solid 2px rgb(63, 63, 243);
-                //border-bottom: solid 2px red;
-               // border-right: solid 2px red; 
                 &:hover {
                     font-size: 30px;
                     color: white;
@@ -85,16 +77,18 @@ main {
     }
     #engagements {
         display: flex;
-        margin-top: -85px;
+        margin-top: -55px;
         padding: 20px ;
+        padding-top: 50px;
         flex-direction: column;
         justify-content: space-between;
-        row-gap: 20px;
+        row-gap: 30px;
         z-index: 2;
         padding-bottom: 40px;
         background-color: white;
         background-position: 0%;
         article {
+            position: relative;
             background-color: #fff;
             display: flex;
             //display: flex;
@@ -102,13 +96,30 @@ main {
             box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.301);
             border-radius: 20px;
             padding: 5px;
+            p { 
+                font-size: 1em;
+                font-weight: 400;
+                color: black;
+                display: flex;
+                position: absolute;
+                background-color: rgb(248, 235, 117);
+                padding: 10px;
+                z-index: 3;
+                top: -15px;
+                left: 150px;
+                border-radius: 50%;
+                height: 10px;
+                width: 10px;
+                text-align: center;
+                align-items: center;                
+            }
             figure {
                 flex-basis: 90%;
 
             }
             img {
                 width: 100%;
-                height: 110px;
+                height: 80px;
                 border-top-right-radius: 20px;
                 border-top-left-radius: 20px;
                 object-fit: cover;
@@ -204,14 +215,17 @@ main {
 
         h2 {
             flex-basis: 100%;
+            padding-bottom: 50px;
         }
         div {
+
             display: flex;
+            column-gap: 20px;
             font-size: 0.5em;
             border: solid 2px yellowgreen;
             border-radius: 50%;
-            width: 50px;
-            height: 50px;
+            width: 150px;
+            height: 150px;
             justify-content: center;
             align-items: center;
             text-align: center ;
