--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,12 +187,12 @@ main {
       padding: 0;
       justify-content: center;
       align-items: center; }
-    main #call-to-action figure > video {
+    main #call-to-action figure > iframe {
       opacity: 1;
-      margin-top: 40px;
+      margin-top: 70px;
       width: 100%;
       max-width: 100%;
-      height: 400px;
+      height: 320px;
       object-fit: cover;
       z-index: 2; }
     main #call-to-action figure > div {
@@ -214,7 +214,7 @@ main {
         display: flex;
         font-size: 27px;
         position: relative;
-        top: 255px;
+        top: 205px;
         color: #e67e1d;
         border: 5px solid rgba(255, 255, 255, 0.863);
         font-weight: 700;
@@ -238,7 +238,7 @@ main {
     display: flex;
     margin-top: -55px;
     padding: 20px;
-    padding-top: 50px;
+    padding-top: 80px;
     flex-direction: column;
     justify-content: space-between;
     row-gap: 30px;
