--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -20,12 +20,12 @@ main {
             justify-content: center;
             align-items: center;
         }
-        figure > video {
+        figure > iframe {
             opacity: 1;
-            margin-top: 40px; 
-            width: 100%;
+            margin-top: 70px; 
+            width: 100%; 
             max-width: 100%;
-            height: 400px;
+            height: 320px;
             object-fit: cover;
                        
           
@@ -50,7 +50,7 @@ main {
                 display: flex;
                 font-size: 27px;
                 position: relative;
-                top: 255px;
+                top: 205px;
                 color: rgb(230, 126, 29);
                 border: 5px solid rgba(255, 255, 255, 0.863);
                 font-weight: 700;
@@ -79,7 +79,7 @@ main {
         display: flex;
         margin-top: -55px;
         padding: 20px ;
-        padding-top: 50px;
+        padding-top: 80px; 
         flex-direction: column;
         justify-content: space-between;
         row-gap: 30px;
