--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -20,12 +20,15 @@ h1 {
 }
 
 h2 {
-    font-size: 1.4em;
+    
+    text-shadow: 1px 16px 20px rgba(0, 0, 0, 0.514);
+    font-size: 1.6em;
+    letter-spacing: -1.6px;
     font-weight: 300;
     padding-bottom: 10px;
     color: rgb(15, 15, 15);
     font-family: 'Roboto';
-    text-shadow: 4px 10px 4px rgba(15, 15, 15, 0.075);
+    text-shadow:  1px 30px 30px -7px rgba(95, 93, 93, 0.767);
     padding-left: 4px;
     opacity: 0.8;
     padding-top: 15px;
