--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ header {
     display: none; }
 
 main {
-  padding-top: 80px;
+  padding-top: 105px;
   display: flex;
   flex-direction: column;
   background-color: white; }
@@ -239,11 +239,11 @@ main {
   main #engagements {
     display: flex;
     margin-top: -55px;
-    padding: 20px;
+    padding: 20px 35px;
     padding-top: 80px;
     flex-direction: column;
     justify-content: space-between;
-    row-gap: 30px;
+    row-gap: 10px;
     z-index: 2;
     padding-bottom: 40px;
     background-color: white;
@@ -251,7 +251,8 @@ main {
     main #engagements h2 {
       display: flex;
       justify-content: flex-start;
-      align-items: center; }
+      align-items: center;
+      padding-bottom: 20px; }
       main #engagements h2 i {
         margin-right: 25px;
         color: green;
@@ -265,7 +266,7 @@ main {
       border-radius: 20px;
       padding: 5px; }
       main #engagements article p {
-        font-size: 1em;
+        font-size: 0.8em;
         font-weight: 500;
         color: black;
         display: flex;
@@ -273,25 +274,25 @@ main {
         background-color: #f8eb75;
         padding: 10px;
         z-index: 3;
-        top: 70px;
+        top: 40px;
         left: -15px;
         border-radius: 50%;
-        height: 10px;
-        width: 10px;
+        height: 6px;
+        width: 6px;
         text-align: center;
         align-items: center; }
       main #engagements article figure {
         flex-basis: 90%; }
       main #engagements article img {
         width: 100%;
-        height: 80px;
+        height: 50px;
         border-top-right-radius: 20px;
         border-top-left-radius: 20px;
         object-fit: cover; }
       main #engagements article h3 {
         opacity: 0.9;
         font-weight: 400;
-        font-size: 0.9em;
+        font-size: 0.7em;
         letter-spacing: -0.5px;
         font-family: "Roboto";
         color: rgba(0, 0, 0, 0.671);
@@ -317,7 +318,7 @@ main {
     row-gap: 20px; }
     main #products h2 {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       row-gap: 20px;
       justify-content: center;
       align-items: center;
@@ -325,12 +326,14 @@ main {
       main #products h2 i {
         margin-right: 25px;
         color: #dd8809;
-        font-size: 50px;
-        text-shadow: none; }
+        font-size: 24px;
+        border: solid 3px #dd8809;
+        padding: 15px;
+        border-radius: 50%;
+        background-color: whitesmoke; }
     main #products article {
       background-color: white;
       opacity: 0.8;
-      padding: 5px;
       display: flex;
       flex-direction: column;
       box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4);
@@ -349,7 +352,7 @@ main {
         object-position: bottom; }
       main #products article h3 {
         opacity: 0.9;
-        font-weight: 300;
+        font-weight: 500;
         font-size: 1em;
         font-family: "roboto";
         color: black;
