--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -3,7 +3,7 @@
 
 
 main {
-    padding-top: 80px;
+    padding-top: 105px;
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -78,11 +78,11 @@ main {
     #engagements {
         display: flex;
         margin-top: -55px;
-        padding: 20px ;
+        padding: 20px 35px ;
         padding-top: 80px; 
         flex-direction: column;
         justify-content: space-between;
-        row-gap: 30px;
+        row-gap: 10px;
         z-index: 2;
         padding-bottom: 40px;
         background-color: white;
@@ -91,6 +91,7 @@ main {
             display: flex;
             justify-content: flex-start;
             align-items: center;
+            padding-bottom: 20px;
             i {
                 margin-right: 25px;
                 color: green;
@@ -107,7 +108,7 @@ main {
             border-radius: 20px;
             padding: 5px;
             p { 
-                font-size: 1em;
+                font-size: 0.8em;
                 font-weight: 500;
                 color: black;
                 display: flex;
@@ -115,11 +116,11 @@ main {
                 background-color: rgb(248, 235, 117);
                 padding: 10px;
                 z-index: 3;
-                top: 70px;
+                top: 40px;
                 left: -15px;
                 border-radius: 50%;
-                height: 10px;
-                width: 10px;
+                height: 6px;
+                width: 6px;
                 text-align: center;
                 align-items: center;                
             }
@@ -129,7 +130,7 @@ main {
             }
             img {
                 width: 100%; 
-                height: 80px;
+                height: 50px;
                 border-top-right-radius: 20px;
                 border-top-left-radius: 20px;
                 object-fit: cover;
@@ -137,7 +138,7 @@ main {
             h3 {
                 opacity: 0.9;
                 font-weight: 400;
-                font-size: 0.9em;
+                font-size: 0.7em;
                 letter-spacing: -0.5px;
                 //font-family: 'Dancing Script', cursive;
                 font-family: "Roboto";
@@ -170,7 +171,7 @@ main {
         row-gap: 20px;
         h2 {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             row-gap: 20px;
             justify-content: center;
             align-items: center;
@@ -178,15 +179,17 @@ main {
             i {
                 margin-right: 25px;
                 color: rgb(221, 136, 9);
-                font-size: 50px;
-                text-shadow: none;
+                font-size: 24px;
                 
+                border: solid 3px rgb(221, 136, 9);
+                padding: 15px;
+                border-radius: 50%;
+                background-color: whitesmoke;
             }
         }
         article {
-            background-color: white;
+            background-color: rgb(255, 255, 255);
             opacity: 0.8;
-            padding: 5px;
             display: flex;
             flex-direction: column;
             box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
@@ -207,7 +210,7 @@ main {
             }
             h3 {
                 opacity: 0.9;
-                font-weight: 300;
+                font-weight: 500;
                 font-size: 1em;
                 //font-family: 'Dancing Script', cursive;
                 font-family: "roboto";
