--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -217,7 +217,8 @@ main {
                    border-radius: 10px;
                    display: block;
                    min-width: 140px;
-                   i {
+                   box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.301);
+                   i { 
                        margin-top: 5px;
                        margin-right: 10px;
                    }
