--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,11 +56,17 @@ table {
 .f-wrap {
   flex-wrap: wrap; }
 
+.d-none {
+  display: none; }
+
 .obj-top {
   object-position: top !important; }
 
 .obj-center {
   object-position: center !important; }
+
+.active {
+  display: flex; }
 
 /* colors */
 body {
@@ -73,13 +79,14 @@ main {
   padding: 20px 0; }
 
 h1 {
+  display: flex;
   margin-top: -70px;
   font-weight: 500;
-  width: 100%;
+  flex-basis: 90%;
   font-size: 1.8em;
   color: black;
   font-family: 'Playfair Display', serif;
-  padding: 30px 30px 15px 27px; }
+  padding: 30px 0 15px 27px; }
 
 h2 {
   text-shadow: 1px 16px 20px rgba(0, 0, 0, 0.514);
@@ -89,7 +96,6 @@ h2 {
   padding-bottom: 10px;
   color: #0f0f0f;
   font-family: 'Roboto';
-  text-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.767);
   padding-left: 4px;
   opacity: 0.8;
   padding-top: 15px; }
@@ -106,8 +112,27 @@ a {
   text-decoration: none;
   color: black; }
 
+#btn_engagement {
+  margin: 20px 50px 10px 65px;
+  flex-basis: 50%;
+  border: solid 2px rgba(228, 169, 82, 0.555);
+  text-align: center;
+  color: #f7f7f7;
+  padding: 10px 20px;
+  border-radius: 20px;
+  font-weight: 900;
+  background-color: orange;
+  box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.301);
+  transition: all 0.3s; }
+  #btn_engagement:hover {
+    cursor: pointer;
+    box-shadow: 8px 10px 19px -7px rgba(90, 87, 87, 0.651); }
+
 footer {
-  background-color: #303030; }
+  display: flex;
+  background-color: #303030;
+  flex-basis: 100%;
+  flex-direction: column; }
   footer ul li {
     padding: 10px 0; }
     footer ul li a > i {
@@ -133,7 +158,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
-  width: 100%;
+  flex-basis: 100%;
   z-index: 10;
   border-bottom-right-radius: 0px;
   box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
@@ -178,6 +203,7 @@ header {
 main {
   padding-top: 105px;
   display: flex;
+  flex-basis: 100%;
   flex-direction: column;
   background-color: white; }
   main #call-to-action {
@@ -240,17 +266,23 @@ main {
           background-size: 300%;
           box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.164); }
   main #engagements {
-    display: flex;
     margin-top: -55px;
     padding: 20px 35px;
     padding-top: 80px;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     row-gap: 10px;
     z-index: 2;
     padding-bottom: 40px;
     background-color: white;
     background-position: 0%; }
+    main #engagements > div {
+      display: none;
+      flex-direction: column;
+      opacity: 1;
+      background-color: white;
+      row-gap: 30px;
+      z-index: 3; }
     main #engagements h2 {
       display: flex;
       justify-content: flex-start;
@@ -302,16 +334,6 @@ main {
         padding: 10px;
         text-align: center;
         text-shadow: 10px 0px 12px #f8f4f3; }
-    main #engagements div {
-      display: flex;
-      flex-basis: 100%;
-      min-height: 120px;
-      background-color: yellowgreen;
-      opacity: 0.6;
-      margin-bottom: 20px;
-      justify-content: center;
-      align-items: center;
-      border-radius: 20px; }
   main #products {
     position: relative;
     background-color: rgba(235, 231, 217, 0.432);
