--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -9,13 +9,14 @@ main {
     
 }
 h1 {
+    display: flex;
     margin-top: -70px;
     font-weight: 500;
-    width: 100%;
+    flex-basis: 90%;
     font-size: 1.8em;
     color: black;
     font-family: 'Playfair Display', serif;
-    padding: 30px 30px 15px 27px;
+    padding: 30px 0 15px 27px;
     
 }
 
@@ -28,7 +29,6 @@ h2 {
     padding-bottom: 10px;
     color: rgb(15, 15, 15);
     font-family: 'Roboto';
-    text-shadow:  1px 30px 30px -7px rgba(95, 93, 93, 0.767);
     padding-left: 4px;
     opacity: 0.8;
     padding-top: 15px;
