--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -5,6 +5,7 @@
 main {
     padding-top: 105px;
     display: flex;
+    flex-basis: 100%;
     flex-direction: column;
     background-color: white;
     #call-to-action {
@@ -76,17 +77,24 @@ main {
         }
     }
     #engagements {
-        display: flex;
         margin-top: -55px;
         padding: 20px 35px ;
         padding-top: 80px; 
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: center;
         row-gap: 10px;
         z-index: 2;
         padding-bottom: 40px;
         background-color: white;
         background-position: 0%;
+         > div {
+            display: none;
+            flex-direction: column;
+            opacity: 1;
+            background-color: white;
+            row-gap: 30px;
+            z-index: 3;
+        }
         h2 {
             display: flex;
             justify-content: flex-start;
@@ -148,18 +156,6 @@ main {
                 text-shadow: 10px 0px 12px rgb(248, 244, 243);
                 
             }
-        }
-         div {
-            display: flex;
-            flex-basis: 100%;
-            min-height: 120px;
-            background-color: yellowgreen;
-            opacity: 0.6;
-            margin-bottom: 20px;
-            justify-content: center;
-            align-items: center;
-            border-radius: 20px;
-        
         }
     }
     #products {
