--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ a {
   color: black; }
 
 #btn_engagement {
-  margin: 20px 50px 10px 65px;
+  margin: -30px 50px 0 65px;
   flex-basis: 50%;
   border: solid 2px rgba(228, 169, 82, 0.555);
   text-align: center;
@@ -287,7 +287,8 @@ main {
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      padding-bottom: 20px; }
+      margin-top: -30px;
+      padding-bottom: 40px; }
       main #engagements h2 i {
         margin-right: 25px;
         color: green;
