--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -1,5 +1,5 @@
 #btn_engagement {
-    margin: 20px 50px 10px 65px;
+    margin: -30px 50px 0 65px;
     flex-basis: 50%;
     border: solid 2px rgba(228, 169, 82, 0.555);
     text-align: center;
