--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -99,7 +99,8 @@ main {
             display: flex;
             justify-content: flex-start;
             align-items: center;
-            padding-bottom: 20px;
+            margin-top: -30px;
+            padding-bottom: 40px;
             i {
                 margin-right: 25px;
                 color: green;
