--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -1,13 +1,13 @@
 #btn_engagement {
     margin: -30px 50px 0 65px;
     flex-basis: 50%;
-    border: solid 2px rgba(228, 169, 82, 0.555);
+    border: none;
     text-align: center;
     color: rgb(247, 247, 247);
     padding: 10px 20px;
     border-radius: 20px;
     font-weight: 900;
-    background-color: orange;
+    background-color: rgba(238, 159, 13, 0.911);
     box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.301);
     transition: all 0.3s;
     &:hover {
