--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -100,6 +100,7 @@ main {
             justify-content: flex-start;
             align-items: center;
             margin-top: -30px;
+            margin-left: 30px;
             padding-bottom: 40px;
             i {
                 margin-right: 25px;
@@ -112,7 +113,7 @@ main {
             background-color: #fff;
             display: flex;
             animation-name: slide-top;
-            animation-duration: 0.7s;
+            animation-duration: 1s;
             //display: flex;
             flex-direction: column;
             box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.301);
