--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,7 +330,7 @@ main {
       justify-content: flex-start;
       align-items: center;
       margin-top: -30px;
-      margin-left: 30px;
+      margin-left: 4 0px;
       padding-bottom: 40px; }
       main #engagements h2 i {
         margin-right: 25px;
