--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -100,7 +100,8 @@ main {
             justify-content: flex-start;
             align-items: center;
             margin-top: -30px;
-            margin-left: 30px;
+            margin-left: 4
+            0px;
             padding-bottom: 40px;
             i {
                 margin-right: 25px;
