--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,7 +260,7 @@ main {
       padding: 0;
       justify-content: center;
       align-items: center; }
-    main #call-to-action figure > iframe {
+    main #call-to-action figure > img {
       opacity: 1;
       margin-top: 70px;
       width: 100%;
@@ -330,7 +330,7 @@ main {
       justify-content: flex-start;
       align-items: center;
       margin-top: -30px;
-      margin-left: 4 0px;
+      margin-left: 40px;
       padding-bottom: 40px; }
       main #engagements h2 i {
         margin-right: 25px;
