--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -21,7 +21,7 @@ main {
             justify-content: center;
             align-items: center;
         }
-        figure > iframe {
+        figure > img {  
             opacity: 1;
             margin-top: 70px; 
             width: 100%; 
@@ -100,8 +100,7 @@ main {
             justify-content: flex-start;
             align-items: center;
             margin-top: -30px;
-            margin-left: 4
-            0px;
+            margin-left: 40px;
             padding-bottom: 40px;
             i {
                 margin-right: 25px;
