--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,20 +155,14 @@ footer {
     height: 20px;
     padding-bottom: 20px; }
 
-@media screen and (min-width: 992px) {
-  footer > div {
-    max-width: 60%;
-    margin: 0 auto; } }
-
 header {
   background-color: white;
   position: fixed;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
-  flex-basis: 100%;
+  width: 100%;
   z-index: 10;
-  border-bottom-right-radius: 0px;
   box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
   border-bottom: solid 2px rgba(247, 120, 1, 0.733); }
   header a > img {
@@ -311,7 +305,8 @@ main {
     margin-top: -55px;
     padding: 20px 35px;
     padding-top: 80px;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     row-gap: 10px;
     z-index: 2;
@@ -320,13 +315,16 @@ main {
     background-position: 0%; }
     main #engagements > div {
       display: none;
-      flex-direction: column;
+      flex-direction: row;
       opacity: 1;
       background-color: white;
       row-gap: 30px;
-      z-index: 3; }
+      z-index: 3;
+      flex-wrap: wrap;
+      justify-content: space-around; }
     main #engagements h2 {
       display: flex;
+      width: 100%;
       justify-content: flex-start;
       align-items: center;
       margin-top: -30px;
@@ -338,6 +336,7 @@ main {
         font-size: 30px; }
     main #engagements article {
       position: relative;
+      max-width: 350px;
       background-color: #fff;
       display: flex;
       animation-name: slide-top;
@@ -345,7 +344,8 @@ main {
       flex-direction: column;
       box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.301);
       border-radius: 20px;
-      padding: 5px; }
+      padding: 5px;
+      margin-right: 20px; }
       main #engagements article p {
         font-size: 0.8em;
         font-weight: 500;
@@ -385,14 +385,17 @@ main {
     background-color: rgba(235, 231, 217, 0.432);
     display: flex;
     padding: 20px 20px;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: row;
+    column-gap: 10px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
     row-gap: 20px; }
     main #products h2 {
       display: flex;
       flex-direction: row;
       row-gap: 20px;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       padding-bottom: 20px; }
       main #products h2 i {
@@ -406,11 +409,13 @@ main {
     main #products article {
       background-color: white;
       display: flex;
+      max-width: 420px;
       flex-direction: column;
       flex-wrap: wrap;
       box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.4);
       border-radius: 20px;
       height: auto;
+      margin: auto;
       background-position: bottom;
       background-size: 50%; }
       main #products article div {
@@ -483,6 +488,7 @@ main {
       display: flex;
       justify-content: flex-start;
       align-items: center;
+      width: 100%;
       padding-bottom: 20px; }
       main #producteurs h2 i {
         margin-right: 25px;
@@ -508,3 +514,54 @@ main {
           width: 120px;
           height: 120px;
           border-radius: 50%; }
+
+@media screen and (min-width: 500px) {
+  h1 {
+    font-size: 2em; }
+  header a > img {
+    height: 160px; }
+  header #icons_bars_menu {
+    left: 90px; }
+  #producteurs {
+    background-size: 120%;
+    padding: 50px 40px; }
+    #producteurs div {
+      margin-right: 40px; }
+  h2 {
+    font-size: 2.1em; }
+  main #producteurs {
+    background-size: 120%;
+    height: 600px; }
+    main #producteurs div {
+      margin-right: 90px; } }
+
+@media screen and (min-width: 1200px) {
+  h1 {
+    font-size: 3em;
+    padding-top: 0; }
+  header a > img {
+    height: 200px; }
+  header #icons_bars_menu {
+    left: 220px;
+    top: 120px; }
+  main #products {
+    padding-bottom: 40px; }
+    main #products h2 {
+      font-size: 2.5em; }
+      main #products h2 i {
+        position: relative;
+        bottom: 0px;
+        font-size: 1.3em;
+        padding: 16px; }
+  main #producteurs {
+    background-size: 40%; }
+    main #producteurs div {
+      margin-right: 20px;
+      height: 200px;
+      width: 200px; }
+    main #producteurs h2 {
+      font-size: 3em; }
+      main #producteurs h2 i {
+        font-size: 1.3em; }
+  footer {
+    padding: 40px; } }
