--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -80,7 +80,8 @@ main {
         margin-top: -55px;
         padding: 20px 35px ;
         padding-top: 80px; 
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
         justify-content: center;
         row-gap: 10px;
         z-index: 2;
@@ -89,14 +90,17 @@ main {
         background-position: 0%;
          > div {
             display: none;
-            flex-direction: column;
+            flex-direction: row;
             opacity: 1;
             background-color: white;
             row-gap: 30px;
             z-index: 3;
+            flex-wrap: wrap;
+            justify-content: space-around;
         }
         h2 {
             display: flex;
+            width: 100%;
             justify-content: flex-start;
             align-items: center;
             margin-top: -30px;
@@ -110,6 +114,7 @@ main {
         }
         article {
             position: relative;
+            max-width: 350px;
             background-color: #fff;
             display: flex;
             animation-name: slide-top;
@@ -119,6 +124,7 @@ main {
             box-shadow: 8px 10px 19px -7px rgba(0, 0, 0, 0.301);
             border-radius: 20px;
             padding: 5px;
+            margin-right: 20px;
             p { 
                 font-size: 0.8em;
                 font-weight: 500;
@@ -167,14 +173,17 @@ main {
         background-color: rgba(235, 231, 217, 0.432);
         display: flex;
         padding: 20px 20px;
-        flex-direction: column;
-        justify-content: space-between;
+        flex-direction: row;
+        column-gap: 10px;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-around;
         row-gap: 20px;
         h2 {
             display: flex;
             flex-direction: row;
             row-gap: 20px;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
             padding-bottom: 20px;
             i {
@@ -191,12 +200,13 @@ main {
         article {
             background-color: rgb(255, 255, 255);
             display: flex;
-           
+           max-width: 420px;
             flex-direction: column;
             flex-wrap: wrap;
             box-shadow: 8px 10px 19px -7px rgba(0,0,0,0.4);
             border-radius: 20px;
             height: auto;
+            margin: auto;
             background-position: bottom;
             background-size: 50%;
             div {
@@ -282,6 +292,7 @@ main {
             display: flex;
             justify-content: flex-start;
             align-items: center;
+            width: 100%;
             padding-bottom: 20px;
             i {
                 margin-right: 25px;
@@ -313,5 +324,76 @@ main {
                 }
             }
         }
+    }
+}
+@media screen and (min-width: 500px) {
+    h1 {
+        font-size: 2em;
+    }
+    header a > img {
+        height: 160px;
+    }
+    header #icons_bars_menu {
+        left: 90px;
+    }
+    #producteurs {
+        background-size: 120%;
+        padding: 50px 40px;
+        div {
+            margin-right: 40px;
+        }
+    }
+    h2 {
+        font-size: 2.1em;
+    }
+    main #producteurs {
+        background-size: 120%;
+        height: 600px;
+        div {
+            margin-right: 90px;
+        }
+    }
+}
+@media screen and (min-width: 1200px) {
+    h1 {
+        font-size: 3em;
+        padding-top: 0;
+    }
+    header a > img {
+        height: 200px;
+    }
+    header #icons_bars_menu {
+        left: 220px;
+        top: 120px;
+        
+    }
+    main #products {
+        padding-bottom: 40px;
+        h2 {
+            font-size: 2.5em;
+            i {
+                position: relative;
+                bottom: 0px;
+                font-size: 1.3em;
+                padding: 16px;
+            }
+        }
+    }
+    main #producteurs{
+        background-size: 40%;
+        div {
+            margin-right: 20px;
+            height: 200px;
+            width: 200px;
+        }
+        h2 {
+            font-size: 3em;
+            i {
+                font-size: 1.3em;
+            }
+        }
+    }
+    footer {
+        padding: 40px;
     }
 }
