--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -5,9 +5,8 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
-    flex-basis: 100%;
+    width: 100%;
     z-index: 10;
-    border-bottom-right-radius: 0px;
     box-shadow: 1px 30px 30px -7px rgba(95, 93, 93, 0.322);
     border-bottom: solid 2px rgba(247, 120, 1, 0.733);
 
