--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -63,7 +63,7 @@ header {
         flex-direction: column;
         top: 0;
         right: 0;
-        height: 800px;
+        height: 100vh;
         width: 100%;
         background-color: whitesmoke;
         align-items: flex-start;
